
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2025 FEB 04b
  * in model/fluid/_Navier-Stokes_plasma/fluid.c
    - added TEMODEL_TRANSPORT_RODRIGUEZ2025 in various locations as needed
  * in model/fluid/_Navier-Stokes_plasma/fluid_plasma.c
    - added TEMODEL_TRANSPORT_RODRIGUEZ2025 in various locations as needed


2025 FEB 04a
  * in model/chem/_C2H4_Air_Plasma_36s/chem.c
    - added CHEMMODEL_ADAMOVICHPARENT2025
  * in model/chem/_C2H4_Air_Plasma_36s/
    - added adamovichparent2025.c and adamovichparent2025.h
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - added find_Qe_Rodriguez2025()
    - modified several functions to take TEMODEL_TRANSPORT_RODRIGUEZ2025 into account
    - added find_dSe_dU_transport_Rodriguez2025()
  * in model/thermo/_generic/electronimpact.c
    - added _ke_kl_N2vib_from_Te(), _fk_N2vib_from_Tv(), _QeN2vib_from_rhok_T_Tv_Te(), 
      find_dQeN2vib_from_rhok_T_Tv_Te()
      

2025 JAN 22a
  * in model/chem/_NH3_Plasma_21s/arakoni2007v3.c
    - fixed bugs
  * in model/chem/_NH3_Plasma_21s/chem.hh
    - fixed bugs
    

2025 JAN 21a
  * in src/common.c
    - in is_node_bdry_corner(), fixed a bug


2025 JAN 20b
  * in model/metrics/_generic/metrics.c
    - in find_distance_between_near_bdry_node_and_boundary_plane(), now uses is_node_bdry_corner()
      instead of find_unit_vector_normal_to_boundary_plane() to determine whether the distance
      should be computed or not
  * in src/common.c
    - added is_node_bdry_corner()


2025 JAN 20a
  * in model/metrics/_generic/metrics.c
    - renamed _distance_between_near_bdry_node_and_boundary_plane() to 
      find_distance_between_near_bdry_node_and_boundary_plane()
    - in find_distance_between_near_bdry_node_and_boundary_plane(), returns 